--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,25 +1,33 @@
+body{
+    /* fix background */
+    background-image: url(/images/toDoBackGround.jpg) ;
+    position: static;
+}
 nav,footer{
     padding: 8px;
-    background-color:grey;
-    border-radius: 10px;
+    background-color:rgb(255, 255, 255);
+ 
+    border: 2px solid  rgba(186, 186, 186, 0.32);
 
 }
 
 ul{
-display: flex;
-justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 
 }
 li{
     display: flex-inline;
     list-style-type: none;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: rgb(254, 253, 253);
+    font-size: 25px;
+    /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+    color: rgb(0, 13, 255);
 }
 nav a{
 
     text-decoration: none;
-    color: rgb(254, 253, 253);
+    color: rgb(0, 13, 255);
+    font-weight: bold;
 }
 #mainBody{
     margin: 25px;
@@ -28,10 +36,11 @@ nav a{
     margin: 10px;
     display: flex;
     justify-content: center;
-    background-color: rgba(255, 0, 136, 0.758);
+    background-color: rgba(255, 0, 136, 0.32);
     padding: 20px;
     border-radius: 20px;
-    opacity: 30px;
+    border: 2px solid  rgba(186, 186, 186, 0.32);
+    backdrop-filter: blur(20px)
  
 }
 #userTask{
@@ -44,7 +53,52 @@ nav a{
     display: flex;
     justify-content: center;
 }
-.WTDimg{
+.toDo{
     width: 300px;
+ 
+}
 
+
+table{
+    margin: 50px;
+    padding: 70px;
+    color: white ;
+    background-color: rgba(128, 128, 128, 0.7);
+    border-radius: 20px;
+    border: 2px solid  rgba(255, 0, 136, 0.32);
+    /* border: 2px solid  rgba(186, 186, 186, 0.32); */
+    backdrop-filter: blur(20px);
+
+}
+
+
+
+select{
+    border-radius: 10px;
+}
+
+#userid{
+    padding: 10px;
+    padding-top: 20px;
+    margin: 10px;
+    border: 2px solid black;
+    border-radius: 10px;
+
+}
+#completed{
+    padding: 10px;
+    margin: 10px;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+
+.noSign{
+    width: 20px;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-top: 5px;
+}
+td{
+    padding: 10px;
+    text-align: center;
 }
